hphp/hack/test/package/package_access/illegal_cross_package_with_requirepackage_attr1.php.exp.v1
error: Typing[4472] Cannot reference this __RequirePackage function [1]
-> This function is marked with __RequirePackage("pkg2") [2]
-> the current file belongs to package pkg1 [3]

illegal_cross_package_with_requirepackage_attr1.php--a.php:6:5
    4 | class A {
    5 |   public function test() : void {
[1] 6 |     test(); // error
    7 |   }
    8 | }
[2] 9 | <<__RequirePackage("pkg2")>>
   10 | function test(): void {}

PACKAGES.toml:3:11
    1 | [packages]
    2 | 
[3] 3 | [packages.pkg1]
    4 | include_paths=["//"]
    5 | 

1 error found
